<resources>
    <string name="app_name">Click To Eat</string>
    <string name="login">Login</string>
    <string name="create_account">Create an Account</string>
    <string name="let_get_start">Let\'s Get Start</string>
    <string name="click_to_eat">Click To Eat</string>
    <string name="app_descrip">Our Crew Dedicated To Prepare 100% Yummiest Cake That You Love</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="re_enter_password">Re enter Password</string>
    <string name="profile_pp">Profile</string>
    <string name="my_account">My Account</string>
    <string name="my_order">My Orders</string>
    <string name="log_out">Log out</string>
    <string name="edit_account">Edit Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="emial_hint">example@gmail.com</string>
    <string name="phone_number_hint">071-084 4756</string>
    <string name="delete_my_account">Delete My  Account</string>
    <string name="frogot_password">Frogot Password</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="pluse">+</string>
    <string name="maine">-</string>
    <string name="price">LKR-Price</string>
    <string name="qty_price">1 x Price</string>
    <string name="food_title">Food Title</string>
    <string name="details">Details</string>
    <string name="food_detials">Food Details</string>
    <string name="delevery_start">Delivery Start</string>
    <string name="delevery_cancel">"Delivery Cancel "</string>
    <string name="delivery_cancel">Delivey Cancel</string>
    <string name="delivery_completed">Delivey Completed</string>
    <string name="total_amount">Total Amount</string>
    <string name="address">Address</string>
    <string name="start">Start</string>
    <string name="customer_name1">"Customer Name "</string>
    <string name="customer_name">Customer Name</string>
    <string name="registerUser">registerUser</string>
    <string name="loginUser">loginUser</string>
</resources>