<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    android:orientation="vertical"
    tools:context=".FoodDeliveryDetails">

    <TextView
        android:id="@+id/txtDetailsDD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#009688"
        android:text="@string/details"
        android:textAlignment="center"
        android:textColor="#0B0A0A"
        android:textSize="40dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="365dp"
            android:layout_height="597dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/math_bg"
            android:orientation="horizontal"
            android:padding="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="597dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtFoodDetailsDD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/food_detials"
                    android:textColor="#040303"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtFoodQDD"
                    android:layout_width="205dp"
                    android:layout_height="86dp"
                    android:layout_marginLeft="10dp"
                    android:text="Food Nmae x Quantity            Food Nmae x Quantity"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtAddressDD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/address"
                    android:textColor="#040303"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtAddressDetDD"
                    android:layout_width="167dp"
                    android:layout_height="84dp"
                    android:layout_marginLeft="10dp"
                    android:text="Customer Name No203,Araliya Gard,Colombo"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtPhoneDD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/phone_number"
                    android:textColor="#040303"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPhoneDetDD"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="011-236 4534"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtTotalAmountDD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/total_amount"
                    android:textColor="#040303"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPriceDD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/price"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnDelStrDD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/delevery_start"
                    app:backgroundTint="#0464B1" />

                <Button
                    android:id="@+id/btnDecanDD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/delivery_cancel"
                    app:backgroundTint="#A5071E" />

                <Button
                    android:id="@+id/btnDelComDD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/delivery_completed"
                    app:backgroundTint="#FF0505" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>