<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyProfile"
    android:background="#ffffff">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="263dp">

        <ImageView
            android:id="@+id/imgMyMA"
            android:layout_width="196dp"
            android:layout_height="136dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.244"
            app:srcCompat="@drawable/round_account_button_with_user_inside" />

        <TextView
            android:id="@+id/txtUserNameMA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textColor="#020202"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.776" />

        <TextView
            android:id="@+id/txtEditAccountMA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_account"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.959"
            tools:layout_editor_absoluteX="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="233dp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtEmailAddressMA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/email"
            android:textColor="#020202"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtEmailMA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="12dp"
            android:padding="20dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/emial_hint"
            android:textColor="#101010"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtPhoneMA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/phone_number"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPhoneNumMA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="12dp"
            android:padding="20dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/phone_number_hint"
            android:textColor="#000000"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtDeleteMyMA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_my_account"
            android:textColor="#FA0101"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>