<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfilePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="165dp">

        <TextView
            android:id="@+id/txtProfilePP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_pp"
            android:textColor="#000000"
            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.638" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtMyAccountPP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/my_account"
            android:textColor="#000000"
            android:textSize="30sp"
            app:drawableStartCompat="@drawable/custom_person_icon" />

        <TextView
            android:id="@+id/txtMyOrderPP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/my_order"
            android:textColor="#050505"
            android:textSize="30sp"
            app:drawableStartCompat="@drawable/custom_order_icon" />

        <TextView
            android:id="@+id/txtLogOutPP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/log_out"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:drawableStartCompat="@drawable/custom_logout_icon" />


    </LinearLayout>
</LinearLayout>