<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomePage"
    android:background="#ffffff">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="301dp">

        <TextView
            android:id="@+id/txtAppNameWP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/croissant_one"
            android:text="@string/click_to_eat"
            android:textColor="#130B0B"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.675" />

        <TextView
            android:id="@+id/txtLetgsWP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_get_start"
            android:textColor="#000000"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imgLogoWP"
            android:layout_width="276dp"
            android:layout_height="155dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtLetgsWP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.123"
            app:srcCompat="@drawable/clicktoead01" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/btnLoginWP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="#009688" />

        <Button
            android:id="@+id/btnSignUpWP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_account"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="#009688" />

    </LinearLayout>

</LinearLayout>